Run tests only if go file changes
Signed-off-by: Arthur Silva Sens <arthur.sens@coralogix.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,6 +1,11 @@
 name: e2e
 on:
   pull_request:
+    paths:
+      - '**.go'
+      - '**/go.mod'
+      - '**/go.sum'
+      - '.github/workflows/e2e.yml'
   push:
     branches:
       - 'release-*'
