Replace errors in pkg/{admission,alertmanager}
Signed-off-by: Arthur Silva Sens <arthur.sens@coralogix.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,13 +28,10 @@ linters-settings:
   depguard:
     rules:
       forbid-pkg-errors:
+        files:
+        - "**/admission/*.go"
+        - "**/alertmanager/*.go"
+        - "**/alertmanager/**/*.go"
         deny:
         - pkg: "github.com/pkg/errors"
           dsc: Should be replaced with standard lib errors or fmt.Errorf
-
-severity:
-  default-severity: error
-  rules:
-    - linters:
-      - depguard
-      severity: info
