Check if operator has access to storageclass | Add logic to verify if storageclass exist | Add e2e test for invalid storageclass | RBAC to access storageclass
Signed-off-by: Chirayu Kapoor <chirayu.kapoor@suse.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -41360,6 +41360,12 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - storage.k8s.io
+  resources:
+  - storageclasses
+  verbs:
+  - get
 ---
 apiVersion: apps/v1
 kind: Deployment
