--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -22,8 +22,9 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: AlertmanagerConfig defines a namespaced AlertmanagerConfig to
-          be aggregated across multiple namespaces configuring one Alertmanager cluster.
+        description: AlertmanagerConfig is used to define configurations for Prometheus
+          Alertmanager, specifying how alerts are grouped and notified to external
+          systems.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -5294,8 +5295,9 @@ spec:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: AlertmanagerConfig defines a namespaced AlertmanagerConfig to
-          be aggregated across multiple namespaces configuring one Alertmanager cluster.
+        description: AlertmanagerConfig is used to define configurations for Prometheus
+          Alertmanager, specifying how alerts are grouped and notified to external
+          systems.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
