docs: improve alertmanagerConfig description (#5955)
---------

Signed-off-by: Mario Fernandez <mariofer@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -22,8 +22,8 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: AlertmanagerConfig defines a namespaced AlertmanagerConfig to
-          be aggregated across multiple namespaces configuring one Alertmanager cluster.
+        description: AlertmanagerConfig configures the Prometheus Alertmanager, specifying
+          how alerts should be grouped, inhibited and notified to external systems.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
