--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -6015,6 +6015,7 @@ spec:
                   - PrometheusText0.0.4
                   type: string
                 type: array
+                x-kubernetes-list-type: atomic
               scrapeTimeout:
                 description: Number of seconds to wait until a scrape request times
                   out.
