--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -5102,6 +5102,7 @@ spec:
                   - PrometheusText0.0.4
                   type: string
                 type: array
+                x-kubernetes-list-type: atomic
               scrapeTimeout:
                 description: Number of seconds to wait until a scrape request times
                   out.
