--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
@@ -1113,6 +1113,7 @@ spec:
                   - PrometheusText0.0.4
                   type: string
                 type: array
+                x-kubernetes-list-type: atomic
               scrapeTimeout:
                 description: ScrapeTimeout is the number of seconds to wait until
                   a scrape request times out.
