--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1194,7 +1194,8 @@
                       ],
                       "type": "string"
                     },
-                    "type": "array"
+                    "type": "array",
+                    "x-kubernetes-list-type": "atomic"
                   },
                   "scrapeTimeout": {
                     "description": "ScrapeTimeout is the number of seconds to wait until a scrape request times out.",
