feat: add RoleARN support in EC2SDConfigs
Related-to #5818

Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_scrapeconfigs.yaml
@@ -607,6 +607,9 @@ spec:
                     region:
                       description: The AWS region
                       type: string
+                    roleARN:
+                      description: AWS Role ARN, an alternative to using AWS API keys.
+                      type: string
                     secretKey:
                       description: SecretKey is the AWS API secret.
                       properties:
