--- a/bundle.yaml
+++ b/bundle.yaml
@@ -33052,6 +33052,9 @@ spec:
                     region:
                       description: The AWS region
                       type: string
+                    roleARN:
+                      description: AWS Role ARN, an alternative to using AWS API keys.
+                      type: string
                     secretKey:
                       description: SecretKey is the AWS API secret.
                       properties:
