--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -830,10 +830,11 @@ spec:
                         type: object
                       type: array
                     msteamsConfigs:
-                      description: List of MSTeams configurations.
+                      description: List of MSTeams configurations. It requires Alertmanager
+                        >= 0.26.0.
                       items:
-                        description: MSTeamsConfig configures notifications via MS
-                          Teams. See https://prometheus.io/docs/alerting/latest/configuration/#msteams_config
+                        description: MSTeamsConfig configures notifications via Microsoft
+                          Teams. It requires Alertmanager >= 0.26.0.
                         properties:
                           httpConfig:
                             description: HTTP client configuration.
@@ -1186,11 +1187,13 @@ spec:
                             description: Whether to notify about resolved alerts.
                             type: boolean
                           text:
+                            description: Message body template.
                             type: string
                           title:
+                            description: Message title template.
                             type: string
                           webhookUrl:
-                            description: MSTeams webhook url
+                            description: MSTeams webhook URL.
                             properties:
                               key:
                                 description: The key of the secret to select from.  Must
