--- a/bundle.yaml
+++ b/bundle.yaml
@@ -20825,8 +20825,8 @@ spec:
                         should be added to labelSelector on the topologySpreadConstraint.
                       items:
                         enum:
-                        - name
-                        - shard
+                        - ResourceName
+                        - ShardName
                         type: string
                       type: array
                       x-kubernetes-list-type: set
@@ -30740,8 +30740,8 @@ spec:
                         should be added to labelSelector on the topologySpreadConstraint.
                       items:
                         enum:
-                        - name
-                        - shard
+                        - ResourceName
+                        - ShardName
                         type: string
                       type: array
                       x-kubernetes-list-type: set
