--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -6224,8 +6224,8 @@ spec:
                         should be added to labelSelector on the topologySpreadConstraint.
                       items:
                         enum:
-                        - name
-                        - shard
+                        - ResourceName
+                        - ShardName
                         type: string
                       type: array
                       x-kubernetes-list-type: set
