feat: support Selectors field in kubernetes SD
Related-to #5711

Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
@@ -914,10 +914,34 @@ spec:
                   properties:
                     role:
                       description: Role of the Kubernetes entities that should be
-                        discovered. Currently the only supported role is "Node".
+                        discovered.
                       enum:
                       - Node
+                      - node
                       type: string
+                    selectors:
+                      description: Selector to select objects.
+                      items:
+                        description: K8SSelectorConfig is Kubernetes Selector Config
+                        properties:
+                          field:
+                            type: string
+                          label:
+                            type: string
+                          role:
+                            description: K8SRole is role of the service in Kubernetes.
+                              Currently the only supported role is "Node".
+                            enum:
+                            - Node
+                            - node
+                            type: string
+                        required:
+                        - role
+                        type: object
+                      type: array
+                      x-kubernetes-list-map-keys:
+                      - role
+                      x-kubernetes-list-type: map
                   required:
                   - role
                   type: object
